crates/fig-parser/tests/snapshots/integration_tests__structs__empty.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Empty
      generic_params: []
      requires: []
      fields: []
