crates/fig-parser/tests/snapshots/integration_tests__structs__generic_single.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Box
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: value
          ty:
            Path:
              segments:
                - T
              generic_args: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Pair
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: first
          ty:
            Path:
              segments:
                - T
              generic_args: []
        - name: second
          ty:
            Path:
              segments:
                - T
              generic_args: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Optional
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: has_value
          ty: Bool
        - name: value
          ty:
            Path:
              segments:
                - T
              generic_args: []
