crates/fig-parser/tests/snapshots/integration_tests__structs__multiple_fields.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Point
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
        - name: y
          ty: F64
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Point3
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
        - name: y
          ty: F64
        - name: z
          ty: F64
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Rgba
      generic_params: []
      requires: []
      fields:
        - name: r
          ty: U8
        - name: g
          ty: U8
        - name: b
          ty: U8
        - name: a
          ty: U8
