crates/fig-parser/tests/snapshots/integration_tests__structs__pointer_fields.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Node
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
        - name: next
          ty:
            Pointer:
              nullable: false
              mutable: true
              element_type:
                Path:
                  segments:
                    - Node
                  generic_args: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Tree
      generic_params: []
      requires: []
      fields:
        - name: value
          ty: I32
        - name: left
          ty:
            Pointer:
              nullable: true
              mutable: false
              element_type:
                Path:
                  segments:
                    - Tree
                  generic_args: []
        - name: right
          ty:
            Pointer:
              nullable: true
              mutable: false
              element_type:
                Path:
                  segments:
                    - Tree
                  generic_args: []
