crates/fig-parser/tests/snapshots/integration_tests__structs__slice_fields.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Buffer
      generic_params: []
      requires: []
      fields:
        - name: data
          ty:
            Array:
              element_type: U8
              size: ~
        - name: len
          ty: USize
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Matrix
      generic_params: []
      requires: []
      fields:
        - name: rows
          ty: USize
        - name: cols
          ty: USize
        - name: data
          ty:
            Array:
              element_type: F64
              size: ~
