crates/fig-parser/tests/snapshots/integration_tests__structs__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Public
      annotations: []
      is_packed: false
      name: PublicPoint
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
        - name: y
          ty: F64
  - Struct:
      visibility: Export
      annotations: []
      is_packed: false
      name: ExportedRect
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
        - name: y
          ty: F64
        - name: w
          ty: F64
        - name: h
          ty: F64
  - Struct:
      visibility: Private
      annotations: []
      is_packed: false
      name: PrivateNode
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
        - name: next
          ty:
            Pointer:
              nullable: true
              mutable: false
              element_type:
                Path:
                  segments:
                    - PrivateNode
                  generic_args: []
