crates/fig-parser/tests/snapshots/integration_tests__structs__with_requires.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Queue
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires:
        - Path:
            segments:
              - Container
            generic_args:
              - Path:
                  segments:
                    - T
                  generic_args: []
      fields:
        - name: head
          ty:
            Pointer:
              nullable: true
              mutable: false
              element_type:
                Path:
                  segments:
                    - Node
                  generic_args:
                    - Path:
                        segments:
                          - T
                        generic_args: []
        - name: tail
          ty:
            Pointer:
              nullable: true
              mutable: false
              element_type:
                Path:
                  segments:
                    - Node
                  generic_args:
                    - Path:
                        segments:
                          - T
                        generic_args: []
        - name: len
          ty: USize
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Display
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires:
        - Path:
            segments:
              - Drawable
            generic_args: []
        - Path:
            segments:
              - Resizable
            generic_args: []
      fields:
        - name: width
          ty: U32
        - name: height
          ty: U32
        - name: content
          ty:
            Path:
              segments:
                - T
              generic_args: []
